2006-01-27  Jan Schmidt  <thaytan@mad.scientist.com>

	* ext/sdl/sdlvideosink.c: (gst_sdlvideosink_supported),
	(gst_sdlvideosink_xoverlay_set_xwindow_id),
	(gst_sdlvideosink_deinitsdl), (gst_sdlv_process_events),
	(gst_sdlvideosink_event_thread), (gst_sdlvideosink_initsdl),
	(gst_sdlvideosink_destroy), (gst_sdlvideosink_create),
	(gst_sdlvideosink_setcaps), (gst_sdlvideosink_show_frame),
	(gst_sdlvideosink_change_state),
	(gst_sdlvideosink_navigation_send_event):
	* ext/sdl/sdlvideosink.h:
	  Fix output stride copying, so that it displays correctly on 
	  framebuffer devices that don't match our implict GStreamer stride
	  arrangement.

	  Fix locking things. Offer XOverlay only when SDL is running against
	  X. Make non-scaled (and ugly) embedding work via X Overlay. It can't
	  actually match the embedded window size because there's no way to
	  figure out what size that should be from the XOverlay interface.
	  See comment in sdlvideosink.c

2006-01-26  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/qtdemux/qtdemux.c: (qtdemux_parse_trak):
	  Fix wrong memcpy source pointer.

2006-01-25  Edgard Lima <edgard.lima@indt.org.br>

	* ext/libmms/gstmms.c: (gst_mms_finalize):
	* ext/neon/gstneonhttpsrc.c: (gst_neonhttp_src_finalize):
	Just chain up finalize calls (calling parent_class->finalize).

2006-01-25  Edgard Lima <edgard.lima@indt.org.br>

	* ext/libmms/gstmms.c: (gst_mms_finalize), (gst_mms_set_property),
	(gst_mms_get_property), (gst_mms_src_query), (gst_mms_class_init):
	Finalize method has been created and others small changes.

2006-01-24  Tim-Philipp Müller  <tim at centricular dot net>

	* ext/musepack/gstmusepackdec.c: (gst_musepackdec_base_init),
	(gst_musepackdec_class_init), (gst_musepackdec_init),
	(gst_musepackdec_send_newsegment),
	(gst_musepackdec_handle_seek_event), (gst_musepackdec_src_event),
	(gst_musepackdec_src_query), (gst_musepackdec_src_convert),
	(gst_musepack_stream_init), (gst_musepackdec_sink_activate_pull),